feat(a1b2): add Admin Dashboard navigation card to index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <div class="nav-card-title">Location Dashboard</div>
         <div class="nav-card-description">Activity visualization and location tracking</div>
       </a>
+
+      <a href="admin.html" class="nav-card">
+        <div class="nav-card-icon">⚙️</div>
+        <div class="nav-card-title">Admin Dashboard</div>
+        <div class="nav-card-description">Story settings and prompt configuration</div>
+      </a>
     </div>
 
     <!-- Dynamic Firestore Collections -->
