feat(f6g7): add Beat History Count UI control to Stories tab
- Add number input (min=1, max=10, step=1) in admin.html after word count fields
- Load beatHistoryCount from API in story-prompts.js loadStoryPrompts()
- Save beatHistoryCount to API in story-prompts.js saveStoryPrompts()
- Help text explains purpose of field for AI context
- Follows same pattern as wordCountMin/wordCountMax
- Default value: 3 (matches backend VoiceConfigSchema default)

--- a/admin.html
+++ b/admin.html
@@ -309,6 +309,14 @@
                     </div>
                 </div>
 
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="beat-history-count">Beat History Count</label>
+                        <input type="number" id="beat-history-count" min="1" max="10" step="1" value="3">
+                        <div class="form-hint">Number of previous narratives to include as context for AI generation</div>
+                    </div>
+                </div>
+
                 <div class="button-group">
                     <button type="button" id="save-story-btn">Save Story Settings</button>
                 </div>
