feat(h9i0): add story title input to Stories tab

--- a/admin.html
+++ b/admin.html
@@ -278,6 +278,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="story-title">Story Title</label>
+                    <input type="text" id="story-title" required placeholder="Enter story title...">
+                </div>
+
+                <div class="form-group">
                     <label for="place-picker-prompt">Place Picker Prompt</label>
                     <textarea id="place-picker-prompt" rows="8" placeholder="Custom prompt for selecting the next location..."></textarea>
                     <div class="form-hint">Leave blank to use default place picker logic</div>
