--- a/admin.html
+++ b/admin.html
@@ -326,6 +326,63 @@
                     <button type="button" id="save-story-btn">Save Story Settings</button>
                 </div>
                 <span id="story-save-status" style="margin-left: 12px; color: #059669;"></span>
+
+                <!-- OpenAI Context Schema Documentation -->
+                <details style="margin-top: 32px; padding: 20px; background: #f8f9fa; border: 1px solid #e5e7eb; border-radius: 8px;">
+                    <summary style="cursor: pointer; font-size: 15px; font-weight: 600; color: #111827; user-select: none;">
+                        OpenAI Context (what gets sent)
+                    </summary>
+
+                    <div style="margin-top: 20px; display: flex; gap: 24px; align-items: center; justify-content: center; flex-wrap: wrap;">
+                        <!-- Left: System Prompt -->
+                        <div style="background: #fff; border: 2px solid #3b82f6; border-radius: 8px; padding: 16px; max-width: 240px;">
+                            <div style="font-weight: 600; color: #111827; margin-bottom: 8px;">System Prompt</div>
+                            <div style="font-size: 13px; color: #6b7280; line-height: 1.5;">
+                                Rick Steves persona + word count guidance (min/max) + distance + scale + language + custom angle (if set)
+                            </div>
+                        </div>
+
+                        <!-- Center: Arrow and OpenAI -->
+                        <div style="display: flex; flex-direction: column; align-items: center; gap: 8px;">
+                            <div style="font-size: 24px; color: #9ca3af;">→</div>
+                            <div style="background: #111827; color: white; padding: 12px 20px; border-radius: 8px; font-weight: 600; font-size: 14px;">
+                                OpenAI
+                            </div>
+                            <div style="font-size: 24px; color: #9ca3af;">←</div>
+                        </div>
+
+                        <!-- Right: Context Inputs (vertical stack) -->
+                        <div style="display: flex; flex-direction: column; gap: 12px; max-width: 320px;">
+                            <div style="background: #fff; border: 1px solid #e5e7eb; border-radius: 6px; padding: 12px;">
+                                <div style="font-weight: 600; color: #111827; font-size: 14px; margin-bottom: 4px;">Beat History</div>
+                                <div style="font-size: 12px; color: #6b7280; line-height: 1.4;">
+                                    Last N narratives for context continuity (configurable via "Beat History Count" above)
+                                </div>
+                            </div>
+
+                            <div style="background: #fff; border: 1px solid #e5e7eb; border-radius: 6px; padding: 12px;">
+                                <div style="font-weight: 600; color: #111827; font-size: 14px; margin-bottom: 4px;">Place Context</div>
+                                <div style="font-size: 12px; color: #6b7280; line-height: 1.4;">
+                                    Historical/background info about the location (max 800 chars)
+                                </div>
+                            </div>
+
+                            <div style="background: #fff; border: 1px solid #e5e7eb; border-radius: 6px; padding: 12px;">
+                                <div style="font-weight: 600; color: #111827; font-size: 14px; margin-bottom: 4px;">Previous Themes</div>
+                                <div style="font-size: 12px; color: #6b7280; line-height: 1.4;">
+                                    Themes from prior beats to maintain story coherence
+                                </div>
+                            </div>
+
+                            <div style="background: #fff; border: 1px solid #e5e7eb; border-radius: 6px; padding: 12px;">
+                                <div style="font-weight: 600; color: #111827; font-size: 14px; margin-bottom: 4px;">Suggested Angle</div>
+                                <div style="font-size: 12px; color: #6b7280; line-height: 1.4;">
+                                    Custom perspective hint from "Narrative Prompt" settings above (optional)
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </details>
             </div>
         </div>
 
