--- a/admin.html
+++ b/admin.html
@@ -283,6 +283,14 @@
                 </div>
 
                 <div class="form-group">
+                    <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                        <input type="checkbox" id="story-published" style="width: auto;">
+                        Published
+                    </label>
+                    <div class="form-hint">Published stories appear in the iOS app. Unpublished stories are drafts.</div>
+                </div>
+
+                <div class="form-group">
                     <label for="place-picker-prompt">Place Picker Prompt</label>
                     <textarea id="place-picker-prompt" rows="8" placeholder="Custom prompt for selecting the next location..."></textarea>
                     <div class="form-hint">Leave blank to use default place picker logic</div>
