chore: update generated types and camelCase field names

--- a/browse/creators.html
+++ b/browse/creators.html
@@ -40,7 +40,7 @@
     const columns = [
       { key: 'name', label: 'Name', type: 'text' },
       { key: 'description', label: 'Description', type: 'text', truncate: 100 },
-      { key: 'image_path', label: 'Image', type: 'thumbnail' },
+      { key: 'imagePath', label: 'Image', type: 'thumbnail' },
       {
         key: 'link',
         label: 'Link',
