--- a/browse/files.html
+++ b/browse/files.html
@@ -66,7 +66,7 @@
           return `${icon} <span style="text-transform: uppercase; font-size: 12px;">${escapeHtml(value || 'unknown')}</span>`;
         }
       },
-      { key: 'file_path', label: 'File Path', type: 'text', truncate: 60 },
+      { key: 'filePath', label: 'File Path', type: 'text', truncate: 60 },
       { key: 'availability', label: 'Availability', type: 'badge' },
       { key: 'owner', label: 'Owner', type: 'text', truncate: 20 },
       { key: 'created', label: 'Created', type: 'date' }
